# bool-tool

./: CMakeLists.txt  README.md
src/: bitfield.c  bitfield.h  dynamic_array_gen.h  eval.c  eval.h  formula.c  formula.h  grammar.txt  lex.c  lex.h  main.c  parse.c  parse.h  result.h  tokens.c  tokens.h
